feat: implement file changes list with line-of-code statistics, sorting, and treemap hover integration.

--- a/index.html
+++ b/index.html
@@ -183,6 +183,15 @@
         </details>
 
         <details>
+            <summary>File Changes</summary>
+            <div class="accordion-content">
+                <div id="fileChangesList" class="file-changes-list">
+                    <div class="loading-text">Select a commit to view file changes</div>
+                </div>
+            </div>
+        </details>
+
+        <details>
             <summary>Legend</summary>
             <div class="accordion-content">
                 <div class="legend-item">
